Fixing toggle and adding Prio sort

--- a/src/app/list-component/list.component.html
+++ b/src/app/list-component/list.component.html
@@ -51,7 +51,7 @@
                 <th>#</th>
                 <th>Todo description</th>
                 <th>Responsible</th>
-                <th>Priority</th>
+                <th (click) = 'sortPrio()'>Priority</th>
             </tr>
         </thead>
         <tbody>
