Fixed deletion element id order and prio box visual

--- a/src/app/list-component/list-component.scss
+++ b/src/app/list-component/list-component.scss
@@ -10,3 +10,15 @@ text-decoration: line-through;
 td{
     background-color: #FFFFF5
 }
+
+#prio{
+    padding: 2%;
+}
+
+#prio-box{
+    box-sizing: content-box;
+    width: 100%;
+    color: white;
+    padding: 5px;
+    border: solid 5px;
+}
